# nuwa_pen_interview

./: CMakeLists.txt  README.md
include/: Compressor.h  ImageProcessor.h  mainwindow.h
src/: Compressor.cpp  ImageProcessor.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
